--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link href="css/global.css" rel="stylesheet" />
   <link href="css/layout.css" rel="stylesheet" />
   <link href="css/styles.css" rel="stylesheet" />
+  <link href="css/mobile.css" rel="stylesheet" />
 
 </head>
 
