--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <h2 class="blue">Tools</h2>
       <br /><br />
 
-      <div class="flex flex-tool">
+      <div class="flex-tool">
         <div class="flex-item">
           <h3><a href="#art-modal">art/design</a></h3><br />
           <div class="tool">Ai</div>
