--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
   <div id="home">
     <div id="nav">
       <a href="#home" class="brand">Audrey Serene</a>
-      <span class="right">
+      <div class="right">
         <a href="#about">About</a>
         <a href="#projects-head">Projects</a>
         <a href="#contact">Contact</a>
-      </span>
+      </div>
     </div>
     <h1>audrey serene</h1>
     <h2 class="caption">full stack web developer + artist</h2>
